--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   rflutter_alert: ^2.0.4
+  flutter_phoenix: ^1.0.0
  
 
 dev_dependencies:
